SERVER-61606 Don't perform untimestamped catalog writes when index builds reapply skipped records