src/mongo/db/query/sbe_stage_builder.cpp
@@ -602,8 +602,7 @@ bool indexKeyConsistencyCheckCallback(OperationContext* opCtx,
                          keys.get(),
                          multikeyMetadataKeys,
                          multikeyPaths,
-                         nextRecord.id,
-                         IndexAccessMethod::kNoopOnSuppressedErrorFn);
+                         nextRecord.id);
 
             return keys->count(*keyString);
         }
